updated styles and centering for the app

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="animation-line-three"></div>
 
         </section>
-        <img src="images/logo-simple.svg" alt="PTV Logo">
+        <img src="images/logo-simple.svg" alt="PTV Logo" class="ptv-logo">
     </div>
     <script src="scripts/script.js"></script>
 </body>
